fixed overlapping of 3 sections

--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -10,6 +10,7 @@
   margin: auto;
   margin-bottom: 250px;
   padding: 120px 0px;
+  clear: both;
 }
 
 .career-section h2 {
