--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,7 +1,10 @@
 .contact-section {
   margin: auto;
   padding-bottom: 100px;
-  margin-top: 100px;
+  margin-top: 200px;
+  position: relative;
+  z-index: 10;
+  clear: both;
 }
 .contact-section h3 {
   font-size: 60px;
