--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -11,6 +11,9 @@
   height: 100vh;
   box-sizing: border-box;
   will-change: transform;
+  position: relative;
+  z-index: 10;
+  overflow: hidden;
 }
 .work-container {
   margin: auto;
