--- a/src/index.css
+++ b/src/index.css
@@ -96,10 +96,12 @@ body {
   position: relative;
   height: var(--vh);
   margin: auto;
-  margin-top: 100px;
+  margin-top: 200px;
   margin-bottom: 0;
   clear: both;
   display: block;
+  z-index: 5;
+  overflow: hidden;
 }
 
 .techstack h2 {
@@ -111,6 +113,15 @@ body {
   left: 0;
   font-weight: 400;
   text-transform: uppercase;
+}
+
+.tech-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: auto;
 }
 
 @media screen and (min-width: 768px) {
